--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: KOC CI Pipeline
 
 on:
   push:
@@ -25,3 +25,49 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: make build
+    - name: Get the image name
+      id: get_image_name
+      run: echo "::set-output name=image::$(docker images --format "{{.Repository}}:{{.Tag}}" | head -n 1)"
+    - name: tag image
+      run: make docker-release
+
+  scan:
+    needs: [build]
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+    - name: Run Trivy vulnerability scanner
+      uses: aquasecurity/trivy-action@master
+      with:
+        image-ref: 'registry.gitlab.com/shib1000/koc:1.0'
+        format: 'template'
+        template: '@/contrib/sarif.tpl'
+        output: 'trivy-results.sarif'
+
+    - name: Upload SARIF file
+      uses: github/codeql-action/upload-sarif@v1
+      with:
+        sarif_file: 'trivy-results.sarif'
+  
+  push:
+    needs: [scan]
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+    - name: Login to GitLab Container Registry
+      run: docker login registry.gitlab.com -u gitlab-ci-token -p ${{ secrets.GITLAB_TOKEN }}
+    - name: Push to GitLab Container Registry
+      id: build_image
+      run: docker push registry.gitlab.com/shib1000/koc:1.0
+
+  deploy-dev:
+    needs: [push]
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: generate commit in deployrepo
+      run: echo "gen pr in deploy repo"
